// Extracted from config_dump.cs using OverfieldTool
syntax = "proto3";

option go_package = "./;config";
package config;

message SceneConfig {
	repeated SceneInfo Scenes = 1;
	repeated SceneInfo Dungeons = 2;
	int64 SceneConfigVersion = 3;
	repeated MiniGameInfo MiniGameInfos = 4;
}

message MiniGameInfo {
	uint32 ID = 1;
	int32 Duration = 2;
	repeated int32 RewardParams = 3;
	int32 EntityCount = 4;
	int32 ReadyAnimationDuration = 5;
	map<uint32,uint32> WeaponParams = 6;
}

message SceneInfo {
	int32 ID = 1;
	repeated BornInfo Born = 2;
	repeated GatherPointSetInfo GatherPointSetInfo = 3;
	repeated CollectionTreasureInfo CollectionTreasureInfos = 4;
	repeated DungeonCoinInfo CoinInfos = 5;
	repeated DungeonInfo DungeonInfos = 6;
	repeated DungeonMonsterInfo MonsterInfos = 7;
}

message BornInfo {
	Vector3 Position = 1;
	Vector4 Rotation = 2;
}

message Vector3 {
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message Vector4 {
	float X = 1;
	float Y = 2;
	float Z = 3;
	float W = 4;
}

message VectorInt3 {
	int32 X = 1;
	int32 Y = 2;
	int32 Z = 3;
}

message GatherPointSetInfo {
	Vector3 MinStartPoint = 1;
	float CellSize = 2;
	int32 RandomCount = 3;
	repeated GatherSet GatherPointSets = 4;
	int32 Index = 5;
}

message GatherSet {
	int32 Index = 1;
	Vector3 SetIndex = 2;
	repeated GatherPointInfo LifeGatherPointers = 3;
	repeated int32 Neighbor = 4;
}

message GatherPointInfo {
	int32 Index = 1;
	int32 GatherID = 2;
}

message CollectionTreasureInfo {
	int32 Index = 1;
	int32 ID = 2;
}

message RiddleInfo {
	int32 ID = 1;
}

message DungeonCoinInfo {
	int32 Index = 1;
	int32 ID = 2;
}

message DungeonInfo {
	int32 ID = 1;
}

message DungeonMonsterInfo {
	int32 Index = 1;
	int32 UnitID = 2;
}

